feature: DataUtils을 파이프라인 표기형태 추가